# dodo

./: .gitignore  CLAUDE.md  MIGRATION_LOG.md
ai-service/: .env.example  .gitignore  .ruff.toml  README.md  docker-compose.yml  mypy.ini  pyproject.toml
ai-service/app/: __init__.py  config.py  deps.py  main.py
ai-service/app/auth/: __init__.py  internal.py  jwt_verifier.py  middleware.py
ai-service/app/callback/: __init__.py  client.py  signing.py
ai-service/app/chat/: __init__.py  anthropic_client.py  routes.py  schemas.py  system_prompt.py
ai-service/app/cost/: __init__.py  tracker.py
ai-service/app/health/: routes.py
ai-service/app/reports/: routes.py  schemas.py
ai-service/app/safety/: __init__.py  insight_sanitizer.py  ritual_sanitizer.py  scanner.py
ai-service/app/vision/: __init__.py  anthropic_client.py  refine_service.py  routes.py  schemas.py  text_service.py  text_stub.py
ai-service/tests/: conftest.py  test_health.py
ai-service/tests/auth/: test_internal_secret.py  test_jwt_verifier.py  test_middleware.py
ai-service/tests/callback/: test_client.py  test_signing.py
ai-service/tests/chat/: test_stream.py
ai-service/tests/cost/: test_tracker.py
ai-service/tests/reports/: test_cross_metric_insight.py  test_narrative.py  test_ritual_narrative.py  test_walk_diary.py
ai-service/tests/safety/: test_scanner.py
ai-service/tests/vision/: test_macro_parsing.py  test_not_food.py  test_recognize.py  test_recognize_text.py  test_refine.py
backend/: .env.example  composer.json  phpstan-baseline.neon  phpstan.neon  phpunit.xml
(+584 files in other folders)
